test: virtual thread executor test